syntax = "proto3";

package noble.forwarding.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/noble-assets/forwarding/v2/x/forwarding/types";

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc RegisterAccount(noble.forwarding.v1.MsgRegisterAccount) returns (noble.forwarding.v1.MsgRegisterAccountResponse);
  rpc ClearAccount(noble.forwarding.v1.MsgClearAccount) returns (noble.forwarding.v1.MsgClearAccountResponse);
}

//

message MsgRegisterAccount {
  option (cosmos.msg.v1.signer) = "signer";
  option (amino.name) = "noble/forwarding/RegisterAccount";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string recipient = 2;
  string channel = 3;
}

message MsgRegisterAccountResponse {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgClearAccount {
  option (cosmos.msg.v1.signer) = "signer";
  option (amino.name) = "noble/forwarding/ClearAccount";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string address = 2;
}

message MsgClearAccountResponse {}
